[package]
name = "stoic-dotfiles"
version = "0.2.1"
authors = ["Luiz G Mugnaini A <luizmugnaini@gmail.com>"]
license = "MIT"
description = "A tool for managing dotfiles"
readme = "README.md"
homepage = "https://github.com/luizmugnaini/stoic"
repository = "https://github.com/luizmugnaini/stoic"
keywords = ["cli", "dotfiles"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = "4.4.2"
env_logger = "0.10.0"
home = "0.5.5"
log = "0.4.20"
path-absolutize = "3.1.0"
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.3"

[[bin]]
name = "stoic"
path = "src/main.rs"
